add some docs, clean up hash checks